src/test/ui/parser/doc-before-eof.stderr
error: expected item after doc comment
  --> $DIR/doc-before-eof.rs:3:1
   |
LL | /// hi //~ERROR expected item after doc comment
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this doc comment doesn't document anything

error: aborting due to previous error

